# Shootout

./: CMakeLists.txt  GameModel.cpp  GameModel.hpp
components/: Collider.hpp  Position.hpp  Sprite.hpp
datastructures/: SmallList.cpp  SmallList.hpp  UGrid.cpp  UGrid.hpp
entities/: Entity.hpp  LocalPlayer.cpp
systems/: CollisionSystem.cpp  CollisionSystem.hpp  Renderer.cpp  Renderer.hpp  System.cpp  System.hpp
